[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_go"]

[node name="GameOverUI" type="CanvasLayer"]
layer = 20
script = ExtResource("1_go")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320
offset_bottom = 180
color = Color(0, 0, 0, 0.75)

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320
offset_bottom = 180
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Overlay/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Overlay/CenterContainer/VBox"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsContainer" type="GridContainer" parent="Overlay/CenterContainer/VBox"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 2

[node name="TimeLabel" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "생존 시간:"
horizontal_alignment = 2

[node name="TimeValue" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "00:00"

[node name="KillsLabel" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "처치 수:"
horizontal_alignment = 2

[node name="KillsValue" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "0"

[node name="LevelLabel" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "레벨:"
horizontal_alignment = 2

[node name="LevelValue" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "1"

[node name="XPLabel" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "획득 XP:"
horizontal_alignment = 2

[node name="XPValue" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "0"

[node name="ShardsLabel" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "기억 조각:"
horizontal_alignment = 2
modulate = Color(1, 0.84, 0, 1)

[node name="ShardsValue" type="Label" parent="Overlay/CenterContainer/VBox/StatsContainer"]
layout_mode = 2
text = "+0"
modulate = Color(1, 0.84, 0, 1)

[node name="HintLabel" type="Label" parent="Overlay/CenterContainer/VBox"]
layout_mode = 2
text = "SPACE로 돌아가기"
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.7, 1)
